# 3dview

./: .gitignore  CMakeLists.txt
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml  qt-Debug.mk  qt-Debug.pro  qt-Release.pro
resources/: 3dview.qrc
resources/meshes/: hyperbola.stl  simple.stl  simple_open.stl  sphere_2354_faces.stl  sphere_310_faces.stl
resources/shader/: basic.fs  basic.vs  bump.fs  bump.vs  flat.fs  flat.vs  geometry.gs  geometry.vs  gouraud.fs  gouraud.vs  phong.fs  phong.vs  shader.fs  shader.vs  simple.fs  simple.vs  texture.fs  texture.vs  tutorial.fs  tutorial.vs  vertex-lighting.fs  vertex-lighting.vs  wireframe.fs  wireframe.gs  wireframe.vs
resources/textures/: 00readme.txt
src/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  Transform.cpp  Transform.h  main.cpp
ui/: GLFormat_330.h  GLWidget.cpp  GLWidget.h  GLWidget.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui
